--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
         <nav class="menu">
             <ul>
-                <li></li>
+                <li><a href="Zonvakanties.html">Zonvakanties</a></li>
+                <li><a href="Wintersportvakanties.html">Wintersportvakanties</a></li>
+                <li><a href="Actief.html">Actieve vakanties</a></li>
+                <li><a href="Cultuur.html">Culturele vakanties</a></li>
             </ul>
         </nav>
     </div>
-    <nav>
-        <!-- Hier komen de linkjes naar de tabladen-->
-    </nav>
-
 
     <main>
         <!-- Hier komt alle informatie voor de homepagina-->
