--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <div class="header-image">
         <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
         <nav class="menu">
-            <ul>
-                <li><a href="Zonvakanties.html">Zonvakanties</a></li>
-                <li><a href="Wintersportvakanties.html">Wintersportvakanties</a></li>
-                <li><a href="Actief.html">Actieve vakanties</a></li>
-                <li><a href="Cultuur.html">Culturele vakanties</a></li>
-            </ul>
+            <a href="Zonvakanties.html">Zonvakanties</a></li>
+            <a href="Wintersportvakanties.html">Wintersportvakanties</a></li>
+            <a href="Actief.html">Actieve vakanties</a></li>
+            <a href="Cultuur.html">Culturele vakanties</a></li>
         </nav>
     </div>
 
