Ik denk nu dat de lay-out wel grotendeels af is

--- a/index.html
+++ b/index.html
@@ -6,22 +6,62 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <div class="header-image">
         <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
-        <nav class="menu">
-            <a href="Zonvakanties.html">Zonvakanties</a></li>
-            <a href="Wintersportvakanties.html">Wintersportvakanties</a></li>
-            <a href="Actief.html">Actieve vakanties</a></li>
-            <a href="Cultuur.html">Culturele vakanties</a></li>
-        </nav>
     </div>
+    <nav class="menu">
+        <a class="navlinks" href="index.html">Home</a>
+        <a class="navlinks" href="Zonvakanties.html">Zonvakanties</a>
+        <a class="navlinks" href="Wintersportvakanties.html">Wintersportvakanties</a>
+        <a class="navlinks" href="Actief.html">Actieve vakanties</a>
+        <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
+    </nav>
+
 
     <main>
-        <!-- Hier komt alle informatie voor de homepagina-->
-
+        <h1>        </h1>
+        <p> Hier komen dingen over de ontwikkelingslanden en inleiding etcetera.</p>
+        <h2>        </h2>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Even checken</p>
 
 
 
