--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header-image">
-        <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
+        <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
     </div>
     <nav class="menu">
         <a class="navlinks" href="index.html">Home</a>
