--- a/Cultuur.html
+++ b/Cultuur.html
@@ -14,8 +14,8 @@
     </div>
     <nav class="menu">
         <a class="navlinks" href="index.html">Home</a>
-        <a class="navlinks" href="Zonvakanties.html">Zonvakanties</a>
-        <a class="navlinks" href="Wintersportvakanties.html">Wintersportvakanties</a>
+        <a class="navlinks" href="Relaxvakanties.html">Relaxte vakanties</a>
+        <a class="navlinks" href="Uitgaanvakanties.html">Feestvakanties</a>
         <a class="navlinks" href="Actief.html">Actieve vakanties</a>
         <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
     </nav>
