begonnen met memory

--- a/Relaxvakanties.html
+++ b/Relaxvakanties.html
@@ -23,7 +23,7 @@
 
     <main>
         <h1>        </h1>
-        <p> Dingen over zonvakanties </p>
+        <p> Dingen over relaxte vakanties </p>
         <h2>        </h2>
         
     </main>
