--- a/Uitgaanvakanties.html
+++ b/Uitgaanvakanties.html
@@ -19,11 +19,9 @@
         <a class="navlinks" href="Actief.html">Actieve vakanties</a>
         <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
     </nav>
-
-
     <main>
         <h1>        </h1>
-        <p> Dingen over wintersportvakanties </p>
+        <p> Dingen over feestvakanties </p>
         <h2>        </h2>
         
     </main>
