--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <br>
         <br>
         <br>
-        <br>
+        <p>
+            Link naar Memory <a class="linksintext" href="Memory/index.html">Hier</a>
+        </p>
         <br>
         <br>
         <br>
