--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="header-image">
-        <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
+        <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron van het plaatje: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
     </div>
-    <nav class="menu">
+    <nav class="menu">      <!--Navigatie-->
         <a class="navlinks" href="index.html">Home</a>
         <a class="navlinks" href="Relaxvakanties.html">Relaxte vakanties</a>
         <a class="navlinks" href="Uitgaanvakanties.html">Feestvakanties</a>
@@ -22,52 +22,13 @@
 
 
     <main>
-        <h1>        </h1>
+        <h1>        </h1> <!-- Kopjes -->
         <p> Hier komen dingen over de ontwikkelingslanden en inleiding etcetera.</p>
-        <h2>        </h2>
-        <br>
-        <br>
         <br>
         <p>
-            Link naar Memory <a class="linksintext" href="Memory/index.html">Hier</a>
+            Memory: <a class="linksintext" href="Memory/index.html">hier</a> <!--Link naar memory, moet nog verwerkt worden in de tekst-->
         </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p>Even checken</p>
-
-
-
-
+        
 
 
 
