--- a/Memory/index.html
+++ b/Memory/index.html
@@ -2,8 +2,8 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>ReisKompas - Home</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>ReisKompas - Memory</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,11 @@
         <a class="navlinks" href="../Cultuur.html">Culturele vakanties</a>
     </nav>
 
-    
+    <h1>Memoryspel</h1>  
+    <h2>Landen en hoofdsteden</h2>  
+    <div id="game" class="grid"></div>
+
+    <py-script src="main.py"></py-script>
 
     
     <footer>
