--- a/Memory/index.html
+++ b/Memory/index.html
@@ -25,6 +25,7 @@
 
     <h1>Memoryspel</h1>  
     <h2>Landen en hoofdsteden</h2>  
+    <button onclick="reset_game()">Reset spel</button>
     <div id="game" class="grid"></div>
 
     <py-script src="main.py"></py-script>
