--- a/Memory/index.html
+++ b/Memory/index.html
@@ -23,6 +23,8 @@
         <a class="navlinks" href="../Cultuur.html">Culturele vakanties</a>
     </nav>
 
+    <main>
+        
     <h1>Memoryspel</h1>  
     <h2>Landen en hoofdsteden</h2>  
     <button onclick="reset_game()">Reset spel</button>
@@ -30,7 +32,8 @@
 
     <py-script src="main.py"></py-script>
 
-    
+    </main>
+
     <footer>
         <p>&copy; 2025 ReisKompas</p>
     </footer>
