--- a/Memory/index.html
+++ b/Memory/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="header-image">
-        <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron van het plaatje: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
+        <img src="../Plaatjes/Homeplaatje.png" alt="Header afbeelding"> <!-- Bron van het plaatje: https://pixers.nl/fotobehang/vintage-kaart-reis-en-kompas-met-oude-stof-textuur-achtergrond-achtergrond-avontuur-95358395 -->
     </div>
     <nav class="menu">      <!--Navigatie-->
         <a class="navlinks" href="../index.html">Home</a>
