--- a/Memory/index.html
+++ b/Memory/index.html
@@ -37,3 +37,5 @@
     </footer>
 </body>
 </html>
+
+<!--Ideeeeeee: verschillende memory's, eentje voor Azië, eentje voor Amerika, eentje voor Afrika, etc.-->
