Check-knop toegevoegd

--- a/Memory/index.html
+++ b/Memory/index.html
@@ -26,6 +26,7 @@
     <main>
         <h1>Memoryspel</h1>  
         <h2>Landen en hoofdsteden</h2>  
+        <button onclick="check_game()">Check</button>
         <button onclick="reset_game()">Reset spel</button>
         <div id="game" class="grid"></div>
 
