--- a/Memory/index.html
+++ b/Memory/index.html
@@ -28,6 +28,8 @@
         <h2>Landen en hoofdsteden</h2>  
         <button onclick="check_game()">Check</button>
         <button onclick="reset_game()">Reset spel</button>
+        <br>
+        <div id="message"></div>
         <div id="game" class="grid"></div>
 
         <py-script src="main.py"></py-script>
