--- a/Memory/index.html
+++ b/Memory/index.html
@@ -28,7 +28,7 @@
         <h2>Landen en hoofdsteden</h2>  
         <button onclick="check_game()">Check</button>
         <button onclick="reset_game()">Reset spel</button>
-        <div id="message"></div>
+        <div id="message" class="message"></div>
         <div id="game" class="grid"></div>
 
         <py-script src="main.py"></py-script>
