--- a/Memory/index.html
+++ b/Memory/index.html
@@ -26,8 +26,8 @@
     <main>
         <h1>Memoryspel</h1>  
         <h2>Landen en hoofdsteden</h2>  
-        <button onclick="check_game()">Check</button>
-        <button onclick="reset_game()">Reset spel</button>
+        <button py-click="check_game()">Check</button>
+        <button py-click="reset_game()">Reset spel</button>
         <div id="message" class="message"></div>
         <div id="game" class="grid"></div>
 
