--- a/Memory/index.html
+++ b/Memory/index.html
@@ -32,6 +32,16 @@
         <div id="game" class="grid"></div>
 
         <py-script src="main.py"></py-script>
+        <p class="memoryuitleg">
+            <ul>
+                <li>Vietnam - Hanoi</li>
+                <li>Nepal - Kathmundu</li>
+                <li>Kenia - Nairobi</li>
+                <li>Tanzania - Dodoma</li>
+                <li></li>
+            </ul>
+        </p>
+    
     </main>
 
     <footer>
