--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <main>
         <br>
+        <h1>De wereld is groter dan je bucketlist!</h1>
         <p>Ben je toe aan een nieuwe reis, maar weet je nog niet waar naartoe? ReisKompas helpt je om onverwachte, inspirerende en betaalbare bestemmingen te ontdekken. Of je nou zin hebt in een actieve vakantie, een culturele trip, een zonnige strandbestemming of een bruisende uitgaansstad, je vindt het hier allemaal! Bij ons ontdek je snel nieuwe plekken waar je misschien nooit eerder aan hebt gedacht.</p>
         <p>Weet je nog niet zo goed wat je wilt? Dan is onze match-quiz precies wat je nodig hebt. In een paar vragen koppelen we jouw interesses en reisstijl aan bestemmingen die perfect bij je passen. Wil je juist iets nieuws leren? Dan is ons <a class="linksintext" href="Memory/index.html">memory</a> spel ideaal, hiermee leer je op een speelse manier landen en hoofdsteden kennen waar je misschien nooit eerder van gehoord hebt. En als je gewoon zin hebt in directe inspiratie, laat dan onze random bestemmingen generator je verrassen met een mooie foto en een korte, inspirerende beschrijving van een plek die het ontdekken waard is.</p>
         <p>Zo helpt ReisKompas je niet alleen om te kiezen, maar ook om te leren, te ontdekken en met een open blik naar de wereld te kijken. Jouw volgende avontuur begint hier.</p>
