--- a/Memory/index.html
+++ b/Memory/index.html
@@ -32,13 +32,30 @@
         <div id="game" class="grid"></div>
 
         <py-script src="main.py"></py-script>
-        <p class="memoryuitleg">
+        <p class="memorylanden">
+            Landen:
             <ul>
                 <li>Vietnam - Hanoi</li>
-                <li>Nepal - Kathmundu</li>
-                <li>Kenia - Nairobi</li>
-                <li>Tanzania - Dodoma</li>
-                <li></li>
+                <li>Nepal</li>
+                <li>Kenia</li>
+                <li>Tanzania</li>
+                <li>Filipijnen</li>
+                <li>India</li>
+                <li>Ghana</li>
+                <li>Cambodja</li>
+            </ul>
+        </p>
+        <p class = "memorysteden">
+            Hoofdsteden:
+            <ul>
+                <li>Hanoi</li>
+                <li>Kathmundu</li>
+                <li>Nairobi</li>
+                <li>Dodoma</li>
+                <li>Manila</li>
+                <li>New Delhi</li>
+                <li>Accra</li>
+                <li>Phnom Penh</li>
             </ul>
         </p>
     
