--- a/Cultuur.html
+++ b/Cultuur.html
@@ -28,7 +28,7 @@
         
     </main>
     <footer>
-        <p>&copy; 2025 Hackproof</p>
+        <p>&copy; 2025 ReisKompas</p>
     </footer>
 </body>
 </html>
