--- a/Uitgaanvakanties.html
+++ b/Uitgaanvakanties.html
@@ -26,7 +26,7 @@
         
     </main>
     <footer>
-        <p>&copy; 2025 Hackproof</p>
+        <p>&copy; 2025 ReisKompas</p>
     </footer>
 </body>
 </html>
