--- a/Memory/index.html
+++ b/Memory/index.html
@@ -33,17 +33,15 @@
 
         <py-script src="main.py"></py-script>
         <p class="memorylanden">
-            Landen:
-            <ul>
-                <li>Vietnam - Hanoi</li>
-                <li>Nepal</li>
-                <li>Kenia</li>
-                <li>Tanzania</li>
-                <li>Filipijnen</li>
-                <li>India</li>
-                <li>Ghana</li>
-                <li>Cambodja</li>
-            </ul>
+            <p>Landen:</p>
+            <p>Vietnam</p>
+            <p>Nepal</p>
+            <p>Kenia</p>
+            <p>Tanzania</p>
+            <p>Filipijnen</p>
+            <p>India</p>
+            <p>Ghana</p>
+            <p>Cambodja</p>
         </p>
         <p class = "memorysteden">
             Hoofdsteden:
