--- a/Memory/index.html
+++ b/Memory/index.html
@@ -32,7 +32,7 @@
         <div id="game" class="grid"></div>
 
         <py-script src="main.py"></py-script>
-        <p class="memorylanden">
+        <div class="memorylanden">
             <p>Landen:</p>
             <p>Vietnam</p>
             <p>Nepal</p>
@@ -42,20 +42,18 @@
             <p>India</p>
             <p>Ghana</p>
             <p>Cambodja</p>
-        </p>
-        <p class = "memorysteden">
-            Hoofdsteden:
-            <ul>
-                <li>Hanoi</li>
-                <li>Kathmundu</li>
-                <li>Nairobi</li>
-                <li>Dodoma</li>
-                <li>Manila</li>
-                <li>New Delhi</li>
-                <li>Accra</li>
-                <li>Phnom Penh</li>
-            </ul>
-        </p>
+        </div>
+        <div class = "memorysteden">
+            <p>Hoofdsteden:</p>
+            <p>Hanoi</p>
+            <p>Kathmundu</p>
+            <p>Nairobi</p>  
+            <p>Dodoma</p>
+            <p>Manila</p>
+            <p>New Delhi</p>
+            <p>Accra</p>
+            <p>Phnom Penh</p>
+        </div>
     
     </main>
 
