--- a/Memory/index.html
+++ b/Memory/index.html
@@ -35,7 +35,7 @@
         <div class="memory-container">
 
             <div class="memorylanden">
-                <p>Landen:</p>
+                <p class="lijntjeeronder">Landen:</p>
                 <p>Vietnam</p>
                 <p>Nepal</p>
                 <p>Kenia</p>
@@ -49,7 +49,7 @@
             <div id="game" class="grid"></div>
 
             <div class = "memorysteden">
-                <p>Hoofdsteden:</p>
+                <p class="lijntjeeronder">Hoofdsteden:</p>
                 <p>Dodoma</p>
                 <p>Manila</p>
                 <p>Kathmundu</p>
