check-knop teruggezet

--- a/Memory/index.html
+++ b/Memory/index.html
@@ -26,6 +26,7 @@
     <main>
         <h1>Memoryspel</h1>  
         <h2>Landen en hoofdsteden</h2>  
+        <button py-click="check_game">Check</button>
         <button py-click="reset_game">Reset spel</button> <!--Knop waarmee je het spel reset-->
         <div id="message" class="message"></div> <!--Een bericht die hij teruggeeft zodra je op check drukt (of het een match is of niet)-->
         
