--- a/places/Mexico.html
+++ b/places/Mexico.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <title>Italië - Bestemming</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
+
+<body>
+    <nav class="menu">
+        <a class="navlinks" href="../index.html">Home</a>
+    </nav>
+
+    <main>
+        <h1>Mexico</h1>
+        <img src="../Plaatjes/italy.jpg" alt="Italië" style="max-width:400px; border-radius:10px;">
+        <p>Mexico is beroemd om zijn rijke Maya- en Azteekse geschiedenis (denk aan piramides), levendige cultuur (Mariachi-muziek, kleurrijke festivals zoals Día de Muertos), heerlijke keuken (taco's, tequila), prachtige stranden (Riviera Maya), en indrukwekkende landschappen, van vulkanen tot jungles, met als leuk weetje dat het de grootste piramide ter wereld heeft (Cholula) qua volume!</p>
+    </main>
+
+</body>
+</html>
 
