--- a/Roulette.html
+++ b/Roulette.html
@@ -34,7 +34,7 @@
             ];
 
             const random = landen[Math.floor(Math.random() * landen.length)];
-            document.getElementById("resultaat").textContent = random;
+            window.location.href = "places/" + random + ".html";
         }
     </script>
 
