--- a/Actief.html
+++ b/Actief.html
@@ -61,18 +61,18 @@
         <p>Heb jij zin in paragliding, rafting of mountainbiken? Tirol biedt een grote variatie aan sporten en uitdagingen. Ook voor familieuitjes is het een geweldige plek om te komen!</p>
         <p>Wist je dat de croissaint oorspronkelijk kwam uit Oostenrijk? Hij werd gebakken om een Ottomaanse invasie te herdenken in 1683. Het deeg is wel zoeter dan nu.</p>
         <h3>Frankrijk</h3>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>Tripjes kosten over het algemeen niet veel, maar dit is afhankelijk van de hoeveelheid toeristen die er komen. Ook is het natuur daar rond april en juni, alles kleurt zich mooi groen, wat wandelen in de natuur daar aantrekkelijk maakt.</p>
+        <p>Als jij zin hebt om te skiën in de winter in Frankrijk, dan moet je wel opletten op lawines, vooral buiten de officiële skipisten. Ga jij toch de stad in, dan is het vooral handig om op te letten voor zakkenrollers en oplichters.</p>
+        <p>Maak een uitstapje met je gezin naar de Franse Alpen, of ontdekt hoe prachtig de riviervalleien en grotten zijn in de Cevennen.</p>
+        <p>Wist je dat het volgens een oude wet verboden was om een varken 'Napoleon' te noemen? Blijkbaar vond de keizer zijn trots niet wou vernederen. Of deze wet nog geldt is een mythe.</p>
 
         <br>
         <h2>Noord-Amerika</h2>
-        <p></p>
+        <p>Roept anders Noord-Amerika jouw naam? Ontdekt het hier.</p>
         <h3>Canada</h3>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>ALs jij echt een liefhebber bent voor natuur dan MOET je hier naartoe. Er zijn prachtige noorderlichten, je kan met de hondenslee touren en nog veel meer.</p>
+        <p>Een tripje naar Canada kan wel buiten je budget zitten, het is duurder dan hier in Nederland. Verwacht ook dat je grote afstanden moet afleggen als je veel wilt rondreiden; Canada is groot!</p>
+        <p>Canada bezit prachtige en wonderschone natuurparken zoals Banff National Park en Jasper National Park. Voor de dierenliefhebbers: Er is ook een kans dat je wilde dieren tegenkomt.</p>
         <p>In Canada wordt er niet alleen Engels gesproken, maar ook Frans! Maar als je goed Engels kunt spreken dan kom je overal terecht.</p>
         
     </main>
