--- a/Roulette.html
+++ b/Roulette.html
@@ -29,8 +29,8 @@
         function spinRoulette() {
             const landen = [
                 "Vietnam", "India", "Marokko", "Peru", "Ghana",
-                "Bolivia", "Jordanie", "Nepal",
-                "Kenia", "Tanzania", "Filipijnen", "Mexico"
+                "Bolivia", "Jordanie", "Nepal", 
+                "Kenia", "Tanzania", "Filipijnen", "Mexico", "Bhutan", "Congo", "Botswana", "Zimbabwe", "El Salvador", "Kyrgyzstan", 
             ];
 
             const random = landen[Math.floor(Math.random() * landen.length)];
