verstuur knop fixen

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -77,7 +77,7 @@
         </select><br><br>
 
         <!-- Knop om de quiz in te dienen-->
-        <button type="button" id="submitBtn">Verstuur</button>
+         <button id="submitBtn" type="button">Verstuur</button>
     </form>
 
     <!-- Titel en containter voor het resultaat -->
