--- a/Roulette.html
+++ b/Roulette.html
@@ -28,9 +28,9 @@
     <script>
         function spinRoulette() {
             const landen = [
-                "Vietnam", "India", "Marokko", "Peru", "Ghana",
+                "Vietnam", "India", "Peru", "Ghana",
                 "Bolivia", "Jordanie", "Nepal", 
-                "Kenia", "Tanzania", "Filipijnen", "Mexico", "Bhutan", "Congo", "Botswana", "Zimbabwe", "El Salvador", "Kyrgyzstan", 
+                "Kenia", "Tanzania", "Mexico", "Congo", "Zimbabwe",  
             ];
 
             const random = landen[Math.floor(Math.random() * landen.length)];
