--- a/Roulette.html
+++ b/Roulette.html
@@ -30,7 +30,7 @@
             const landen = [
                 "Vietnam", "India", "Peru", "Ghana",
                 "Bolivia", "Jordanie", "Nepal", 
-                "Kenia", "Tanzania", "Mexico", "Congo", "Zimbabwe",  
+                "Kenia", "Mexico", "Congo", "Zimbabwe",  
             ];
 
             const random = landen[Math.floor(Math.random() * landen.length)];
