--- a/places/Bolivia.html
+++ b/places/Bolivia.html
@@ -15,6 +15,9 @@
         <h1>Bolivia</h1>
         <img src="../Plaatjes/bolivia.jpg" alt="Bolivia" class="destination-img">
         <p>Bolivia is een veelzijdig land in Zuid-Amerika met indrukwekkende landschappen, van het Andesgebergte tot de zoutvlaktes van Uyuni. Het heeft een rijke inheemse cultuur en een sterke band met tradities en natuur.</p>
+        <a href="../Random.html">
+            <button class="spin-again-btn">🎡 Spin again</button>
+        </a>
     </main>
 
 </body>
