--- a/places/Congo.html
+++ b/places/Congo.html
@@ -15,6 +15,9 @@
         <h1>Congo</h1>
         <img src="../Plaatjes/congo.jpg" alt="Congo" style="max-width:400px; border-radius:10px;">
         <p>Congo is een land in Afrika met uitgestrekte regenwouden en een enorme biodiversiteit. Het staat bekend om zijn machtige rivier, rijke natuurlijke hulpbronnen en diverse culturen.</p>
+        <a href="../Random.html">
+           <button class="spin-again-btn">🎡 Spin again</button>
+        </a> 
     </main>
 
 </body>
