--- a/places/Jordanie.html
+++ b/places/Jordanie.html
@@ -15,6 +15,9 @@
         <h1>Jordanie</h1>
         <img src="../Plaatjes/jordanie.jpg" alt="Jordanie" style="max-width:400px; border-radius:10px;">
         <p>Jordanië is een land in het Midden-Oosten dat bekendstaat om de eeuwenoude stad Petra en de Wadi Rum-woestijn. Het combineert indrukwekkende natuur met een rijke geschiedenis en cultuur.</p>
+        <a href="../Random.html">
+           <button class="spin-again-btn">🎡 Spin again</button>
+        </a>    
     </main>
 
 </body>
