--- a/places/Nepal.html
+++ b/places/Nepal.html
@@ -15,6 +15,9 @@
         <h1>Nepal</h1>
         <img src="../Plaatjes/nepal.jpg" alt="Nepal" style="max-width:400px; border-radius:10px;">
         <p>Nepal is een land in Zuid-Azië dat bekendstaat om de Himalaya en de Mount Everest. Het heeft een rijke spirituele cultuur en indrukwekkende berglandschappen.</p>
+        <a href="../Random.html">
+           <button class="spin-again-btn">🎡 Spin again</button>
+        </a>    
     </main>
 
 </body>
