--- a/places/Vietnam.html
+++ b/places/Vietnam.html
@@ -15,6 +15,9 @@
         <h1>Vietnam</h1>
         <img src="../Plaatjes/vietnam.jpg" alt="Vietnam" style="max-width:400px; border-radius:10px;">
         <p>Vietnam is een land in Zuidoost-Azië met een rijke geschiedenis en levendige cultuur. Het staat bekend om zijn groene rijstvelden, bruisende steden en lange kustlijn.</p>
+        <a href="../Random.html">
+           <button class="spin-again-btn">🎡 Spin again</button>
+        </a>    
     </main>
 
 </body>
