--- a/places/Bolivia.html
+++ b/places/Bolivia.html
@@ -15,11 +15,19 @@
         <h1>Bolivia</h1>
         <img src="../Plaatjes/bolivia.jpg" alt="Bolivia" class="destination-img">
         <p>Bolivia is een veelzijdig land in Zuid-Amerika met indrukwekkende landschappen, van het Andesgebergte tot de zoutvlaktes van Uyuni. Het heeft een rijke inheemse cultuur en een sterke band met tradities en natuur.</p>
-        <a href="../Random.html">
-            <button class="spin-again-btn">🎡 Spin again</button>
-        </a>
+        <button id="spinAgainBtn" class="spin-again-btn">🎡 Spin again</button>
+        <h2 id="resultaat"></h2>
     </main>
+<script>
+const landen = ["Vietnam", "India", "Peru", "Ghana",
+                "Bolivia", "Jordanie", "Nepal", 
+                "Kenia", "Mexico", "Congo", "Zimbabwe"]; // lijst van alle landen
 
+document.getElementById("spinAgainBtn").addEventListener("click", function() {
+    const random = landen[Math.floor(Math.random() * landen.length)];
+    window.location.href = "../places/" + random + ".html"; // redirect naar nieuw land
+});
+</script>
 </body>
 </html>
 
