--- a/places/Ghana.html
+++ b/places/Ghana.html
@@ -15,9 +15,8 @@
         <h1>Ghana</h1>
         <img src="../Plaatjes/ghana.jpg" alt="Ghana" style="max-width:400px; border-radius:10px;">
         <p>Ghana is een land in West-Afrika dat bekendstaat om zijn gastvrije cultuur en rijke geschiedenis. Het heeft mooie stranden, kleurrijke markten en een sterke muzikale en culturele traditie.</p>
-        <a href="../Random.html">
-           <button class="spin-again-btn">🎡 Spin again</button>
-        </a>    
+        <button id="spinAgainBtn" class="spin-again-btn">🎡 Spin again</button>
+        <h2 id="resultaat"></h2> 
     </main>
 
 </body>
