--- a/places/India.html
+++ b/places/India.html
@@ -15,9 +15,8 @@
         <h1>India</h1>
         <img src="../Plaatjes/India.jpg" alt="India" style="max-width:400px; border-radius:10px;">
         <p>India staat bekend om zijn enorme culturele en religieuze diversiteit, de iconische Taj Mahal, levendige festivals zoals Diwali en Holi, de wereldberoemde keuken vol specerijen en Bollywood-films! </p>
-        <a href="../Random.html">
-           <button class="spin-again-btn">🎡 Spin again</button>
-        </a>     
+        <button id="spinAgainBtn" class="spin-again-btn">🎡 Spin again</button>
+        <h2 id="resultaat"></h2>  
     </main>
 
 </body>
