--- a/places/Kenia.html
+++ b/places/Kenia.html
@@ -15,9 +15,8 @@
         <h1>Kenia</h1>
         <img src="../Plaatjes/kenia.jpg" alt="Kenia" style="max-width:400px; border-radius:10px;">
         <p>Kenia is een land in Oost-Afrika dat bekendstaat om zijn safari’s en rijke natuur. Het heeft uitgestrekte savannes, een diverse wildlife en een levendige cultuur.</p>
-        <a href="../Random.html">
-           <button class="spin-again-btn">🎡 Spin again</button>
-        </a>    
+        <button id="spinAgainBtn" class="spin-again-btn">🎡 Spin again</button>
+        <h2 id="resultaat"></h2>
     </main>
 
 </body>
