--- a/places/Peru.html
+++ b/places/Peru.html
@@ -15,9 +15,8 @@
         <h1>Peru</h1>
         <img src="../Plaatjes/peru.jpg" alt="Peru" style="max-width:400px; border-radius:10px;">
         <p>Peru is een land in Zuid-Amerika dat bekendstaat om de Inca-geschiedenis en Machu Picchu. Het heeft een grote variatie aan landschappen, van de Andes en het Amazonewoud tot de kust aan de Stille Oceaan.</p>
-        <a href="../Random.html">
-           <button class="spin-again-btn">🎡 Spin again</button>
-        </a>    
+        <button id="spinAgainBtn" class="spin-again-btn">🎡 Spin again</button>
+        <h2 id="resultaat"></h2>   
     </main>
 
 </body>
