--- a/places/Zimbabwe.html
+++ b/places/Zimbabwe.html
@@ -15,9 +15,8 @@
         <h1>Zimbabwe</h1>
         <img src="../Plaatjes/zimbabwe.jpg" alt="Zimbabwe" style="max-width:400px; border-radius:10px;">
         <p>Zimbabwe is een land in Zuidelijk Afrika dat bekendstaat om de Victoriawatervallen en indrukwekkende natuurparken. Het heeft een rijke geschiedenis, diverse culturen en een sterke band met tradities.</p>
-        <a href="../Random.html">
-           <button class="spin-again-btn">🎡 Spin again</button>
-        </a>    
+        <button id="spinAgainBtn" class="spin-again-btn">🎡 Spin again</button>
+        <h2 id="resultaat"></h2>
     </main>
 
 </body>
