Commit van Pieter voor Minque: submitBtn werkt nu

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -77,7 +77,7 @@
         </select><br><br>
 
         <!-- Knop om de quiz in te dienen-->
-         <button id="submitBtn" type="button">Verstuur</button>
+         <button id="submitBtn" type="button" py-click="bepaal_resultaat">Verstuur</button>
     </form>
 
     <!-- Titel en containter voor het resultaat -->
