--- a/Roulette.html
+++ b/Roulette.html
@@ -15,7 +15,7 @@
         <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
     </nav>
 
-    <main class="roulette-page">>
+    <main class="roulette-page">
         <h1>Willekeurige bestemming</h1>
         <p>Klik op de knop en laat je verrassen!</p>
 
