--- a/Relaxvakanties.html
+++ b/Relaxvakanties.html
@@ -34,6 +34,7 @@
                 <p>De enige zaken waarmee rekening gehouden moet worden, zijn de hoge prijzen op toeristische plekken en het trage tempo van de Grieken door de siësta. Door het warme weer kan het voorkomen dat winkels en restaurants 's middags niet open zijn.</p>
                 <p>Het eiland bevat veel bezienswaardigheden. Denk bijvoorbeeld aan Lagune van Balos. De lagune verbindt het schiereiland Gramvousa met het eilandje Tigani. Gooi je handdoek uit op het strand en droom weg bij de azuurblauwe en turquoise kleuren van het water. Ook het meer van Kournas is zeer bekend. Het is het enige natuurlijke meer op Kreta. Houd je ogen open, want er leven hier zelfs schildpadden!</p>
                 <p>Wist je dat Kournas 'meer' betekent in het Arabisch?</p>
+                <img src="Plaatjes/Kreta.png" alt="Kreta afbeelding">
                 <h3>Cyprus</h3>
                 <p>Je zou het misschien niet bedenken, maar ook Cyprus zit vol met ruïnes. Het eiland is perfect voor lekker luieren aan het strand. Kijk wel uit voor de hitte en natuurbranden bij een bezoek aan het prachtige eiland, want de temperatuur kan nog wel eens hard stijgen.</p>
                 <p>Bezoek vooral Akamas als je naar Cyprus gaat. Akamas is een bergachtig schiereiland en bevat nog ongerepte stranden.</p>
