--- a/Cultuur.html
+++ b/Cultuur.html
@@ -13,6 +13,11 @@
         <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
     </div>
     <nav class="menu">
+        <div id="logo">
+            <a href="index.html">
+                <img src="Plaatjes/logowebsite.png">
+            </a>
+        </div>
         <a class="navlinks" href="index.html">Home</a>
         <a class="navlinks" href="Relaxvakanties.html">Relaxte vakanties</a>
         <a class="navlinks" href="Uitgaanvakanties.html">Feestvakanties</a>
