--- a/Uitgaanvakanties.html
+++ b/Uitgaanvakanties.html
@@ -13,17 +13,33 @@
         <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
     </div>
     <nav class="menu">
+        <div id="logo">
+            <a href="index.html">
+                <img src="Plaatjes/logowebsite.png">
+            </a>
+        </div>
         <a class="navlinks" href="index.html">Home</a>
         <a class="navlinks" href="Relaxvakanties.html">Relaxte vakanties</a>
-        <a class="navlinks" href="Uitgaanvakanties.html">Feestvakanties</a>
         <a class="navlinks" href="Actief.html">Actieve vakanties</a>
         <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
     </nav>
     <main>
-        <h1>        </h1>
-        <p> Dingen over feestvakanties </p>
-        <h2>        </h2>
-        
+        <h1>Uitgaanvakanties</h1>
+        <p>Ben jij ook een feestbeest en wilt graag op vakantie om te gaan feesten? Dan hebben wij de beste keuzes voor jou al klaar staan. Samen met de vrienden uitstappen of toch alleen, je vind het allemaal hier.<p>
+        <h2>Azië</h2>
+        <h3>Thailand</h3>
+        <p>Doe mee aan de Full Moon feesten op Koh Phangan. Er is veel drukte, mooie neon kleuren, touwtjespringen en nog veel andere activiteiten. Dit is een wereldberoemde feest wat je wel eens moet meemaken! Zo zijn er nog meer eilanden in Thailand waar je kan feesten. Als je al genoeg hebt van Koh Phangan dan kan je ook naar Koh Phi Phi.</p>
+        <3>Filipijnen</3>
+        <p>Er is een prachtig eiland in de Filipijnen genaamd Borocay. Dit is de party spot om naartoe te gaan. Er is een grote aanbod van clubs en bars! Sinds dit eiland best beroemd is kan het best druk zijn, maar door de mooie stranden is het het alsnog waard.</p>
+        <h3>India</h3>
+        <p>Kom naar Goa, een stad in India met prachtige stranden vol muziek. Het nachtleven draait veel om strandfeesten, dj's, lang opblijven en dansen.</p>
+        <h3>Indonesië</h3>
+        <p>Ontdekt het hart van feesten in Bali. Hier heb je drukke nachtclubs, bars en feesten op het strand. Dit eiland is best bekend, maar zeker waard. Op dit eiland is er ook een bekende club: Sky Garden!</p>
+        <h2>Afrika</h2>
+        <h3>Nigeria</h3>
+        <p>Nigeria is de plek voor feesten als je naar Afrika op vakantie gaat, vooral Lagos. Hier vind je straatfeesten, clubs, bars, livemuziek, noem het maar op! Vaak is het hier luid en energiek.</p>
+        <h3>Zuid-Afrika</h3>
+        <p></p>
     </main>
     <footer>
         <p>&copy; 2025 ReisKompas</p>
