--- a/Uitgaanvakanties.html
+++ b/Uitgaanvakanties.html
@@ -29,7 +29,7 @@
         <h2>Azië</h2>
         <h3>Thailand</h3>
         <p>Doe mee aan de Full Moon feesten op Koh Phangan. Er is veel drukte, mooie neon kleuren, touwtjespringen en nog veel andere activiteiten. Dit is een wereldberoemde feest wat je wel eens moet meemaken! Zo zijn er nog meer eilanden in Thailand waar je kan feesten. Als je al genoeg hebt van Koh Phangan dan kan je ook naar Koh Phi Phi.</p>
-        <3>Filipijnen</3>
+        <h3>Filipijnen</h3>
         <p>Er is een prachtig eiland in de Filipijnen genaamd Borocay. Dit is de party spot om naartoe te gaan. Er is een grote aanbod van clubs en bars! Sinds dit eiland best beroemd is kan het best druk zijn, maar door de mooie stranden is het het alsnog waard.</p>
         <h3>India</h3>
         <p>Kom naar Goa, een stad in India met prachtige stranden vol muziek. Het nachtleven draait veel om strandfeesten, dj's, lang opblijven en dansen.</p>
@@ -40,6 +40,14 @@
         <p>Nigeria is de plek voor feesten als je naar Afrika op vakantie gaat, vooral Lagos. Hier vind je straatfeesten, clubs, bars, livemuziek, noem het maar op! Vaak is het hier luid en energiek.</p>
         <h3>Zuid-Afrika</h3>
         <p></p>
+        <h2>Zuid-Amerika</h2>
+        <h3>Brazilië</H3>
+        <p>Maak uitstapjes naar de stad Rio de Janeiro. Hier vind je ontelbaar veel bars. Vergeleken met veel andere steden is Rio de Janeiro vrij relaxt. Heb je meer zin in drukte en dans, ga dan naar Fortaleza. Hier zijn er dansavonden met Braziliaanse dansvormen.</p>
+        <h3>Guyana</h3>
+        <p>Georgetown heeft alles wat je nodig hebt. Van winkelcentra tot bars en clubs; er is genoeg plek om te gaan feesten. Bezoek ook zeker de clubs Altitude en Palm Court.</p>
+        <h2>Europa</h2>
+        <h3>Spanje</h3>
+        <p>Heb jij je ooit afgevraagd wat de grootste discotheek is van Europa? Dan heb je geluk! In Ibiza, Spanje, vind je de grootste discoteek. Er komen vaak beroemde DJ's naar Ibiza. Als je dit niet wilt missen kom dan naar Ibiza!</p>
     </main>
     <footer>
         <p>&copy; 2025 ReisKompas</p>
