--- a/Uitgaanvakanties.html
+++ b/Uitgaanvakanties.html
@@ -39,7 +39,7 @@
         <h3>Nigeria</h3>
         <p>Nigeria is de plek voor feesten als je naar Afrika op vakantie gaat, vooral Lagos. Hier vind je straatfeesten, clubs, bars, livemuziek, noem het maar op! Vaak is het hier luid en energiek.</p>
         <h3>Zuid-Afrika</h3>
-        <p></p>
+        <p>Kom naar Kaapstad voor onvergetelijke tijden. Bars, happy hours, beach clubs, you name it! Vaak zijn er ook nog zwembaden en penthouses. Het is wel belangrijk dat je niet teveel meeneemt, door de drukte kan er wel wat gestolen worden uit je zakken.</p>
         <h2>Zuid-Amerika</h2>
         <h3>Brazilië</H3>
         <p>Maak uitstapjes naar de stad Rio de Janeiro. Hier vind je ontelbaar veel bars. Vergeleken met veel andere steden is Rio de Janeiro vrij relaxt. Heb je meer zin in drukte en dans, ga dan naar Fortaleza. Hier zijn er dansavonden met Braziliaanse dansvormen.</p>
