--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <img src="Plaatjes/logowebsite.png">
             </a>
         </div>
+        <a class="navlinks" href="../index.html">Home</a>
+        <a class="navlinks" href="../Random.html">Random bestemming</a>
         <a class="navlinks" href="Relaxvakanties.html">Relaxte vakanties</a>
         <a class="navlinks" href="Uitgaanvakanties.html">Feestvakanties</a>
         <a class="navlinks" href="Actief.html">Actieve vakanties</a>
