--- a/places/Kenia.html
+++ b/places/Kenia.html
@@ -8,7 +8,12 @@
 
 <body>
     <nav class="menu">
-        <a class="navlinks" href="../index.html">Home</a>
+    <a class="navlinks" href="../index.html">Home</a>
+    <a class="navlinks" href="../Random.html">Random bestemming</a>
+    <a class="navlinks" href="../Relaxvakanties.html">Relaxte vakanties</a>
+    <a class="navlinks" href="../Uitgaanvakanties.html">Feestvakanties</a>
+    <a class="navlinks" href="../Actief.html">Actieve vakanties</a>
+    <a class="navlinks" href="../Cultuur.html">Culturele vakanties</a>
     </nav>
 
     <main>
