--- a/Uitgaanvakanties.html
+++ b/Uitgaanvakanties.html
@@ -24,7 +24,7 @@
         <a class="navlinks" href="Cultuur.html">Culturele vakanties</a>
     </nav>
     <main>
-        <h1>Uitgaanvakanties</h1>
+        <h1>Feestvakanties</h1>
         <p>Ben jij ook een feestbeest en wilt graag op vakantie om te gaan feesten? Dan hebben wij de beste keuzes voor jou al klaar staan. Samen met de vrienden uitstappen of toch alleen, je vind het allemaal hier.<p>
         <h2>Azië</h2>
         <h3>Thailand</h3>
