--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+
+    <!-- Confetti-afbeelding (onzichtbaar tot resultaat verschijnt) -->
+    <img id="confetti" src="../Plaatjes/confetti.png" alt="Confetti">
+
     <header>
         <div class="header-image">
             <img src="../Plaatjes/Homeplaatje.png" alt="Header afbeelding"> 
@@ -110,4 +114,3 @@
 
 </body>
 </html>
-
