aanpassen knop opnieuw

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -107,6 +107,10 @@
         <!-- Titel en containter voor het resultaat -->
         <h2>Jouw resultaat:</h2>
         <div id="resultaat"></div>
+
+        <!-- Opnieuw-knop -->
+        <button id="opnieuwBtn" onclick="location.reload()">Opnieuw</button>
+
     </main>
 
     <!-- Koppelen phyton code, main-py, aan de HTML-pagina -->
@@ -117,7 +121,6 @@
         document.getElementById("confetti").style.display = "none";
     }
     </script>
-
 
 </body>
 </html>
