opnieuw knop pas later zichtbaar na quiz

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -108,7 +108,7 @@
         <h2>Jouw resultaat:</h2>
         <div id="resultaat"></div>
 
-        <!-- Opnieuw-knop -->
+        <!-- Opnieuw-knop (zichtbaar na resultaat) -->
         <button id="opnieuwBtn" onclick="location.reload()">Opnieuw</button>
 
     </main>
@@ -124,3 +124,4 @@
 
 </body>
 </html>
+
