--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -111,6 +111,10 @@
         <!-- Opnieuw-knop (zichtbaar na resultaat) -->
         <button id="opnieuwBtn" onclick="location.reload()">Opnieuw</button>
 
+        <footer>
+            <p>&copy; 2025 ReisKompas</p>
+        </footer>
+
     </main>
 
     <!-- Koppelen phyton code, main-py, aan de HTML-pagina -->
