--- a/Feestvakanties.html
+++ b/Feestvakanties.html
@@ -12,7 +12,7 @@
     <div class="header-image">
         <img src="Plaatjes/Homeplaatje.png" alt="Header afbeelding">
     </div>
-    <nav class="menu">
+    <nav class="menu">      <!--Navigatie-->
         <div id="logo">
             <a href="index.html">
                 <img src="Plaatjes/logowebsite.png">
@@ -28,12 +28,12 @@
         <h1>Feestvakanties</h1>
         <p>Ben jij ook een feestbeest en wilt graag op vakantie om te gaan feesten? Dan hebben wij de beste keuzes voor jou al klaar staan. Samen met de vrienden uitstappen of toch alleen, je vind het allemaal hier.<p>
         
-        <div class="container_type_vakanties">
+        <div class="container_type_vakanties">      <!--Door een container toe te voegen met de continenten als aparte divs, kan er makkelijk met CSS een rand om de aparte continenten heen worden gemaakt-->
             <div>
                 <h2>Azië</h2>
                 <h3>Thailand</h3>
                 <p>Doe mee aan de Full Moon feesten op Koh Phangan. Er is veel drukte, mooie neon kleuren, touwtjespringen en nog veel andere activiteiten. Dit is een wereldberoemde feest wat je wel eens moet meemaken! Zo zijn er nog meer eilanden in Thailand waar je kan feesten. Als je al genoeg hebt van Koh Phangan dan kan je ook naar Koh Phi Phi.</p>
-                <img src="Plaatjes/Thailand_feest.png" alt="Thailand feest" class="type_vakanties_plaatjes">
+                <img src="Plaatjes/Thailand_feest.png" alt="Thailand feest" class="type_vakanties_plaatjes">            <!--Door alle plaatjes in dezelfde class te stoppen, krijgen ze hetzelfde formaat-->
                 <h3>Filipijnen</h3>
                 <p>Er is een prachtig eiland in de Filipijnen genaamd Borocay. Dit is de party spot om naartoe te gaan. Er is een grote aanbod van clubs en bars! Sinds dit eiland best beroemd is kan het best druk zijn, maar door de mooie stranden is het het alsnog waard.</p>
                 <img src="Plaatjes/Filipijnen_feest.png" alt="Filipijnen feest" class="type_vakanties_plaatjes">
